syntax = "proto3";
package user.planet.planet;

// this line is used by starport scaffolding # genesis/proto/import

option go_package = "github.com/user/planet/x/planet/types";

// GenesisState defines the planet module's genesis state.
message GenesisState {
    // this line is used by starport scaffolding # genesis/proto/state
    // this line is used by starport scaffolding # ibc/genesis/proto
}
